public class Human extends Creature {

    Human(String hint) {
        health = 100;
        attack = 20;
        name=hint;
    }

}
